[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mark-xxx"
version = "0.1.0"
description = "A real-time desktop AI assistant for Windows."
readme = "readme.md"
requires-python = ">=3.10"
license = {text = "CC BY-NC 4.0"}
authors = [
  {name = "FatihMakes"},
]
dependencies = [
  "beautifulsoup4==4.14.3",
  "comtypes==1.4.16",
  "duckduckgo-search==8.1.1",
  "google-genai==1.68.0",
  "mss==10.1.0",
  "numpy==2.4.2",
  "opencv-python==4.13.0.92",
  "pillow==11.3.0",
  "playwright==1.58.0",
  "psutil==5.9.8",
  "pyautogui==0.9.54",
  "pyaudio==0.2.14",
  "pycaw==20251023",
  "pyperclip==1.11.0",
  "requests==2.32.5",
  "uiautomation==2.0.29",
  "send2trash==1.8.3",
  "win10toast==0.9",
  "youtube-transcript-api==1.2.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]
vector = [
  "chromadb==0.5.21",
]

[project.scripts]
mark-xxx = "main:main"

[tool.setuptools]
py-modules = ["main", "ui", "get_transcript", "get_transcript2", "get_transcript3"]

[tool.setuptools.packages.find]
include = ["actions*", "agent*", "config*", "core*", "memory*"]

[tool.setuptools.package-data]
core = ["prompt.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
